force-app/main/default/objects/leaseworks__LeaseWorksSettings__c/leaseworks__LeaseWorksSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LeaseWorks Settings</label>
</CustomObject>