force-app/main/default/objects/leaseworks__LeaseWorksSettings__c/fields/leaseworks__AviatorEndPointUrl__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AviatorEndPointUrl__c</fullName>
    <description>This is used in requesting news articles from Aviator Service.</description>
    <label>Z_Unused AviatorEndPointUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>