force-app/main/default/objects/leaseworks__LeaseWorksSettings__c/fields/leaseworks__CustType__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CustType__c</fullName>
    <defaultValue>&apos;LESSOR&apos;</defaultValue>
    <description>LESSOR or AIRLINE, By default LESSOR</description>
    <label>CustType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>