force-app/main/default/objects/leaseworks__LeaseWorksSettings__c/fields/leaseworks__Disable_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Disable_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all triggers.</description>
    <label>Disable All Triggers</label>
    <type>Checkbox</type>
</CustomField>