force-app/main/default/objects/leaseworks__LeaseWorksSettings__c/fields/leaseworks__Disable_All_WFs__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Disable_All_WFs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All WFs</label>
    <type>Checkbox</type>
</CustomField>