force-app/main/default/objects/leaseworks__LeaseWorksSettings__c/fields/leaseworks__Enable_LLP_On_Event_Forecast__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Enable_LLP_On_Event_Forecast__c</fullName>
    <defaultValue>2</defaultValue>
    <description>By Default 0.
0 :  Disable LLP on Event Forecast and VF page both.
1 :  Disable LLP on VF page.
2 :  Enable on Both</description>
    <label>Enable LLP On Event Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>